# weather_forecast_server

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  UPSTREAM.md  rust-toolchain.toml
config/: singapore.example.env  weather_layer_catalog.json
docker/: openmeteo-ecmwf.Dockerfile  openmeteo-engine.Dockerfile
docs/: singapore-native-migration-runbook.md  singapore-rust-source-provenance.md
om_api/: Cargo.toml  README.md
om_api/src/: api.rs  dem.rs  lib.rs  main.rs  manifest.rs  native.rs  official.rs  query.rs  snapshot.rs  solar.rs  solar_lookup.rs
om_api/tests/: api_tests.rs
om_webp/: Cargo.toml  README.md
om_webp/src/: main.rs
reports/: layer_validation_20260625T_gfs013_100x50_9ac02e0_failed.md  layer_validation_20260625T_gfs013_100x50_9c7795d.md  layer_validation_20260625T_gfs013_500x50_9c7795d.md  layer_validation_20260625T_gfs013_50x50_3b6e7c1_failed.md  layer_validation_20260625T_gfs013_50x50_9c7795d.md  point_validation_20260625T0916Z_8cb513d.md  point_validation_20260625T1004Z_afe7095.md  point_validation_20260625T1208Z_2072a5e.md
scripts/: build_native_rust_artifacts.sh  build_openmeteo_cams_layers.sh  build_openmeteo_ecmwf_image.sh  build_openmeteo_ecmwf_layers.sh  build_openmeteo_gfs_layers.sh  build_openmeteo_image.sh  build_openmeteo_layers.py  build_openmeteo_point_package.py  build_openmeteo_pressure_profile_package.py  build_server_openmeteo_layers.sh  build_webp.py  check_1panel_v1_task_state.py  cleanup_native_task_staging.py  compare_model_run_identities.py  compare_shanghai_singapore_api.py  ecmwf_contract.py  (+75 more)
(+548 files in other folders)
