[package]
name = "om-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ryu = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
ureq = { version = "2.12", default-features = false, features = ["tls"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3.15"
tower = { version = "0.5", features = ["util"] }
